--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 body {
   font-family: roboto, sans-serif;
   background-color: #e9e9e9;
+  scroll-behavior: smooth;
 }
 
 .container {
@@ -171,7 +172,7 @@ header {
 }
 
 .intro {
-  display: flex;
+  display: block;
   position: relative;
 }
 
@@ -190,6 +191,19 @@ header {
   font-size: 18px;
 }
 
+.intro-content-list {
+  display: block;
+  /* justify-content: center; */
+  /* align-items: center; */
+  margin-top: 20px;
+}
+.intro-content-list li {
+  margin-bottom: 10px;
+  margin-left: 30px;
+  font-size: 18px;
+  color: #333;
+  list-style-image: url("../images/icons/list.png");
+}
 .btn {
   background: #55acee;
   color: #fff;
@@ -206,12 +220,15 @@ header {
 }
 
 .intro-img-text {
-  padding-left: 20px;
+  padding: 20px;
+  /* flex: 1; */
 }
 .intro-img {
-  width: 100%;
+  width: 80%;
   height: 100%;
-  transform: translateX(0%);
+  margin-left: auto;
+  margin-right: auto;
+  /* transform: translateX(0%); */
   margin-top: 30px;
   border: 1px solid #dcdbdb;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
@@ -221,7 +238,10 @@ header {
   position: relative;
   overflow: hidden;
   z-index: 999;
+  /* flex: 1; */
+  /* padding: 20px; */
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   margin-bottom: 30px;
@@ -289,6 +309,41 @@ header {
 
 .intro-img-social a:nth-child(3):hover {
   color: #ed0ac0;
+}
+
+.how-it-works {
+  margin-top: 30px;
+  margin-bottom: 70px;
+  border-bottom: 1px solid #dcdbdb;
+  padding: 20px 50px;
+  text-align: center;
+  /* background: #f5f5f5; */
+  color: #333;
+  transition: background 0.3s ease;
+}
+
+.how-it-works h2 {
+  font-size: 1.7em;
+  padding-bottom: 20px;
+  color: rgba(13, 113, 234, 0.478);
+}
+
+.how-it-works-steps {
+  display: flex;
+  gap: 70px;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.how-it-works-step-icon {
+  padding: 5px;
+  font-size: 2.5em;
+}
+
+.how-it-works-step h3 {
+  font-size: 1.1em;
+  padding-bottom: 5px;
 }
 
 .testimonials {
@@ -517,6 +572,12 @@ footer {
   .intro h2 {
     font-size: 1.5em;
   }
+  .intro-img-text {
+    /* flex: 1; */
+  }
+  .intro-img {
+    display: block;
+  }
   .intro-img-social {
     flex-direction: row;
     align-items: left;
@@ -525,6 +586,18 @@ footer {
   .intro-img-social a {
     margin-bottom: 10px;
   }
+
+  .how-it-works-steps {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 70px;
+    text-align: center;
+    justify-content: center;
+    align-self: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .testimonial {
     flex-direction: column;
     align-items: center;
@@ -744,14 +817,14 @@ footer {
   }
   .intro-img {
     display: block;
-    width: 100%;
+    /* width: 80%; */
     height: auto;
     object-fit: cover;
     margin-bottom: 30px;
   }
   .intro-img-text {
-    padding-left: 0px;
-    padding-right: 0px;
+    padding-left: 10px;
+    padding-right: 10px;
     padding-bottom: 0px;
     padding-top: 0px;
     text-align: center;
@@ -763,6 +836,19 @@ footer {
   .intro-img-text h2 {
     font-size: 1.5em;
   }
+
+  .how-it-works-steps {
+    display: block;
+    /* gap: 100px; */
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .how-it-works-step {
+    margin-bottom: 20px;
+  }
+
   .testimonial {
     width: 100%;
     gap: 20px;
